--- a/public/analytics.pug
+++ b/public/analytics.pug
@@ -19,8 +19,9 @@ html(lang="en")
             .p-5.a.b
                 .p-5.a.b.c
                     .p-5.b.c.d
-                        h2.display-4 Your video performance
+                        h2.display-4 Your newest video's performance
                     #a-main
+                        iframe(src="https://plausible.io/share/huelet.net?auth=63i23QyGn9SFBSZW8FCVJ&embed=true&theme=light&page=%2Fhome%2F", style="width: 1px; min-width: 100%; height: 1600px;", frameborder="0", scrolling="no", plausible-embed)
             .pl
                 p.text-center Powered By&nbsp;
                     a(href="https://plausible.io?utm_source=huelet_dashboard", target="_blank", rel="noopener noreferrer") Plausible
