Handle HTTP 500 error

--- a/public/errors/fivehundred.pug
+++ b/public/errors/fivehundred.pug
@@ -10,4 +10,4 @@ html(lang="en")
         .jumbotron
             h2.display-4.text-center we did an oopsie...
             h2.display-6.text-center please report this bug at
-            a(href="https://forms.office.com/r/UTitwRXRqh", target="_blank", rel="noopener noreferrer") this form
+            a.display-6.text-center(href="https://forms.office.com/r/UTitwRXRqh", target="_blank", rel="noopener noreferrer") this form
