--- a/public/profile.pug
+++ b/public/profile.pug
@@ -48,7 +48,8 @@ html(lang="en")
                   img.pfpimg.i10n__todo(src=pfp, alt="Your profile picture", width="180", height="180")
                   h2.display-4.p-4=uname
                 h4.display-6.p-4=email
-                  .btn.btn-primary.clu Upload
+                  a(href="/ul")
+                    .btn.btn-primary.clu Upload
                 .alert.alert-secondary.d-flex.flex-row
                   .dir__item.i10n__todo
                     a(href="/studio/videos")
