Funcional: Add Plausible

--- a/public/analytics.pug
+++ b/public/analytics.pug
@@ -13,6 +13,7 @@ html(lang="en")
             height: 32px;
         }
     script(src="https://plausible.io/js/embed.host.js", async)
+    include incl/scripts
     body
     #__client
         #__allc
