--- a/public/profile.pug
+++ b/public/profile.pug
@@ -38,6 +38,7 @@ html(lang="en")
           padding-right: 0.2rem;
         }
       }
+    include incl/scripts
   body
     #__client
       #__allc
