--- a/public/success.pug
+++ b/public/success.pug
@@ -21,6 +21,7 @@ html(lang="en")
                 font-weight: lighter;
                 text-align: center;
             }
+    include incl/scripts
     body
         h2.thrl 😄 Your upload worked!
         h2.thrl Let's get the rest going
