--- a/public/home.pug
+++ b/public/home.pug
@@ -22,6 +22,7 @@ html(lang="en")
     meta(property='twitter:title' content='Huelet - The video platform for humans')
     meta(property='twitter:description' content='This is the dashboard for creators on Huelet')
     meta(property='twitter:image' content='https://cdn.huelet.net/assets/hnlogo-ts.png')
+    include incl/scripts
   body
     if isAuthd === true
       h2.center.display-4 Welcome back! Let's get you where you need to be.
