Funcional: Add 'Deploy' button

--- a/public/success.pug
+++ b/public/success.pug
@@ -29,7 +29,7 @@ html(lang="en")
             input#an(type="text", name="authortitle", hidden, disabled)
             p.thrl Video Title:
             input(type="text", name="videotitle")
-
+            button(type="submit") Deploy Video
     script.
         function getUrlVars() {
             var vars = {};
