--- a/public/success.pug
+++ b/public/success.pug
@@ -25,8 +25,8 @@ html(lang="en")
     body
         h2.thrl 😄 Your upload worked!
         h2.thrl Let's get the rest going
-        form(action="/api/ul/cf", method="get")
-            input#an(type="text", name="authortitle", disabled)
+        form(action=`/api/ul/cf`, method="get")
+            input#an(type="text", name="authortitle")
             p.thrl Video Title:
             input(type="text", name="videotitle")
             button.btn.btn-primary(type="submit") Deploy Video
