Bugfix: Change style.display from 'hidden' to 'none'

--- a/public/success.pug
+++ b/public/success.pug
@@ -42,6 +42,6 @@ html(lang="en")
         const authorname = getUrlVars()["webauthor"];
         const vurl = getUrlVars()["cuurl"];
         document.getElementById('an').value = authorname;
-        document.getElementById('an').style.display = "hidden";
+        document.getElementById('an').style.display = "none";
         document.getElementById('vu').value = vurl;
-        document.getElementById('vu').style.display = "hidden";
+        document.getElementById('vu').style.display = "none";
