Bugfix: Add decodeURI as a constant

--- a/public/success.pug
+++ b/public/success.pug
@@ -5,6 +5,9 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Hehey, your upload worked!
+        link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap.min.css")
+        link(rel="shortcut icon", href="https://cdn.huelet.net/assets/hnlogo-ts.ico", type="image/x-icon")
+        meta(name="robots", content="noindex,nofollow")
         style(type="text/css").
             @font-face {
                 font-family: "Segoe UI";
