--- a/public/profile.pug
+++ b/public/profile.pug
@@ -67,6 +67,13 @@ html(lang="en")
                   .dir__item.i10n__todo
                     a(href="/studio/me/settings")
                       h2.p-4 Settings
+              .container
+                .row
+                  .col-sm.border.border-secondary.rounded-lg
+                    h2.display-6 Change your username
+                      form(action="/api/profiledata/nickname", method="get")
+                        input#nick(type="text", name="nick", required)
+                        button.btn.btn-primary(type="submit") Deploy Changes
     script.
       const height = window.screen.height;
       const width = window.screen.width;
