--- a/public/profile.pug
+++ b/public/profile.pug
@@ -78,7 +78,7 @@ html(lang="en")
                   .col-sm.border.border-secondary.rounded
                     #pfpChange
                       h2.display-6 Change your Profile Picture
-                      form(action="https://file.coffee/api/file/upload?api=016816f9-2e38-4ebc-9009-8d457ab572e2", method="post", enctype="multipart/formdata")
+                      form(action="https://file.coffee/api/file/upload?api=016816f9-2e38-4ebc-9009-8d457ab572e2", method="post", enctype="multipart/form-data")
                         input#profilepic(type="file", name="profile")
                         button.btn.btn-primary(type="submit") Deploy Changes
     script.
