--- a/public/profile.pug
+++ b/public/profile.pug
@@ -79,7 +79,7 @@ html(lang="en")
                     #pfpChange
                       h2.display-6 Change your Profile Picture
                       form(action="https://file.coffee/api/file/upload?api=016816f9-2e38-4ebc-9009-8d457ab572e2", method="post", enctype="multipart/form-data")
-                        input#profilepic(type="file", name="profile")
+                        input#profilepic(type="file", name="file")
                         button.btn.btn-primary(type="submit") Deploy Changes
     script.
         const nameChange = document.getElementById("nickChange");
