--- a/public/success.pug
+++ b/public/success.pug
@@ -34,6 +34,8 @@ html(lang="en")
             p.thrl Video Title:
             input(type="text", name="videotitle")
             button.btn.btn-primary(type="submit") Deploy Video
+      .version
+        p=appversion
     script.
         function getUrlVars() {
             var vars = {};
