--- a/public/upload.pug
+++ b/public/upload.pug
@@ -29,3 +29,5 @@ html(lang="en")
                     #fileName.file-select-button Choose File
                     input#chooseFile(type='file', name='chooseFile', required, accept="video/*")
                 button.btn.hb.btat(type="submit") Upload
+      .version
+        p=appversion
