--- a/public/analytics.pug
+++ b/public/analytics.pug
@@ -27,6 +27,8 @@ html(lang="en")
                 p.text-center Powered By&nbsp;
                     a(href="https://plausible.io?utm_source=huelet_dashboard", target="_blank", rel="noopener noreferrer") Plausible
                         img.plgo(src="https://plausible.io/images/icon/plausible_logo_sm.png", alt="Plausible Analytics Logo")
+      .version
+        p=appversion
     script.
             var request = new XMLHttpRequest();
             request.open('GET', 'https://api.duckduckgo.com/?q=useragent&format=json', true)
