--- a/public/incl/scripts.pug
+++ b/public/incl/scripts.pug
@@ -1,11 +1,11 @@
 <script defer data-domain="dash.huelet.net" src="https://plausible.io/js/plausible.js"></script>
 <style>
     html {
-        position: relative;
+        position: relative
     }
     .version {
     	bottom: 0;
     	left: 0;
-        position: absolute;
+        position: absolute
     }
 </style>
