--- a/public/incl/scripts.pug
+++ b/public/incl/scripts.pug
@@ -1,5 +1,5 @@
 <script defer data-domain="dash.huelet.net" src="https://plausible.io/js/plausible.js"></script>
-<style>
+style.
     html {
         position: relative
     }
@@ -8,4 +8,3 @@
     	left: 0;
         position: absolute
     }
-</style>
