modified:   public/analytics.pug 	modified:   public/profile.pug 	modified:   public/success.pug 	modified:   public/upload.pug

--- a/public/success.pug
+++ b/public/success.pug
@@ -35,7 +35,7 @@ html(lang="en")
             input(type="text", name="videotitle")
             button.btn.btn-primary(type="submit") Deploy Video
       .version
-        p=appversion
+        p=versionData
     script.
         function getUrlVars() {
             var vars = {};
