--- a/public/upload.pug
+++ b/public/upload.pug
@@ -30,4 +30,4 @@ html(lang="en")
                     input#chooseFile(type='file', name='chooseFile', required, accept="video/*")
                 button.btn.hb.btat(type="submit") Upload
       .version
-        p=appversion
+        p=versionData
