--- a/public/profile.pug
+++ b/public/profile.pug
@@ -82,7 +82,7 @@ html(lang="en")
                         input#profilepic(type="file", name="file")
                         button.btn.btn-primary(type="submit") Deploy Changes
       .version
-        p=appversion
+        p=versionData
     script.
         const nameChange = document.getElementById("nickChange");
         function getUrlVars() {
