Bugfix: oops i forgot to add a deploy button again

--- a/public/profile.pug
+++ b/public/profile.pug
@@ -72,6 +72,7 @@ html(lang="en")
                   h2.center Set up TripleAuth
                     form(action="/api/profiledata/tripleauth/enable", method="post")
                       input#tel(type="tel", name="phn")
+                      button.btn.btn-primary(type="submit") Enable TripleAuth
                 .row
                   .col-sm.border.border-secondary.rounded
                     #nickChange
