--- a/public/incl/scripts.pug
+++ b/public/incl/scripts.pug
@@ -1,1 +1,9 @@
-<script defer data-domain="dash.huelet.net" src="https://plausible.io/js/plausible.js"></script>
+script(src="https://plausible.io/js/plausible.js", defer="true" data-domain="dash.huelet.net")
+link(rel="stylesheet", href="https://cdn.huelet.net/assets/dash-globals.css")
+<!--
+This is a dev build of the Dash app.
+This app is not meant for production use.
+Most of the time, you should be using the production version of the app.
+In beta, we are still working on the app and we are still adding new features using the dev version.
+Many of the scripts are not yet minified.
+-->
