💄 More UI change testing (v0.1.1)

--- a/public/home.pug
+++ b/public/home.pug
@@ -31,8 +31,8 @@ html(lang="en")
           a(href="/flow/dash/my") Your dashboard
         div.Button.Button-is-primary
           a(href="/flow/dash/my/settings") Your settings
-        div.Button.Button-is-primary
-          a(href="/flow/dash/my/videos") Your videos
+        a(href="/flow/dash/my/videos")
+          div.Button.Button-is-primary Your videos
     else
       div.login
         h2.center.display-4
