💄 Major UI changes (v0.2.0)

--- a/public/incl/scripts.pug
+++ b/public/incl/scripts.pug
@@ -1,5 +1,18 @@
 script(src="https://plausible.io/js/plausible.js", defer="true" data-domain="dash.huelet.net")
 link(rel="stylesheet", href="https://cdn.huelet.net/assets/dash-globals.css")
+style.
+    @font-face {
+      font-family: "Segoe UI";
+      src: url("https://static2.sharepointonline.com/files/fabric/assets/fonts/segoeui-westeuropean/segoeui-regular.woff2")
+          format("woff2"),
+        url("https://static2.sharepointonline.com/files/fabric/assets/fonts/segoeui-westeuropean/segoeui-regular.woff")
+          format("woff");
+      font-weight: 400;
+      font-style: normal;
+    }
+    html {
+      font-family: "Segoe UI";
+    }
 //
     This is a dev build of the Dash app.
     This app is not meant for production use.
