--- a/public/upload.pug
+++ b/public/upload.pug
@@ -6,11 +6,18 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Upload - Huelet, the video platform for humans
         include incl/scripts
+        style.
+            form input[type="file"] {
+              font-size: 100px;
+              position: absolute;
+              left: 0;
+              top: 0;
+              opacity: 0;
+            }
     body
         form(enctype="multipart/form-data", id="btat")
-                #fileName.file-select-button Choose a file
                 input#chooseFile(type='file', name='chooseFile', required, accept="video/*")
-                button.btn.hb.btat(type="submit") Upload
+                button.Button.Button-is-primary.btat(type="submit") Upload
         script(src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.min.js")
         script.
             $("form#btat").submit(function(event){
