💄 Switch upload button into 2 seperate buttons

--- a/public/upload.pug
+++ b/public/upload.pug
@@ -16,8 +16,9 @@ html(lang="en")
             }
     body
         form(enctype="multipart/form-data", id="btat")
-                button.Button.Button-is-primary.btat(type="submit") Upload
+                button.Button.Button-is-primary.btat() Choose a file
                 input#chooseFile(type='file', name='chooseFile', required, accept="video/*")
+                button.Button.Button-is-primary(type="submit") Upload
         script(src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.min.js")
         script.
             $("form#btat").submit(function(event){
