🐛 Redirect instead of window.alert

--- a/public/upload.pug
+++ b/public/upload.pug
@@ -33,7 +33,7 @@ html(lang="en")
                 contentType: false,
                 processData: false,
                 success: function (returndata) {
-                  alert(returndata);
+                  window.location = returndata;
                 }
               });
               return false;
