--- a/public/login.pug
+++ b/public/login.pug
@@ -392,7 +392,7 @@ script.
             if (resp.status === 200) {
                 responseDiv.innerHTML = '<img src="https://cdn.huelet.net/assets/loaders/circles.svg" alt="Loading...">Loading...';
                 localStorage.setItem('_hltoken', data.token);
-                location.assign("/dashboard")
+                location.assign("/studio/profile")
             } else if (resp.status === 401) {
                 success = false;
                 responseDiv.innerHTML = '<div class="alert alert-danger" role="alert"><h4 class="alert-heading">You couldn\'t sign in!</h4><p>Your password is incorrect.</p></div>';
