--- a/public/login.pug
+++ b/public/login.pug
@@ -391,6 +391,15 @@ script.
             const data = await resp.json();
             if (resp.status === 200) {
                 responseDiv.innerHTML = '<img src="https://cdn.huelet.net/assets/loaders/circles.svg" alt="Loading...">Loading...';
+                const resp = await fetch('/api/cookie', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        token: data.token,
+                    })
+                })
                 document.cookie = `_hltoken=${data.token}; expires=Fri, 31 Dec 9999 23:59:59 GMT; SameSite=None; Secure`;
                 location.assign("/studio/profile");
             } else if (resp.status === 401) {
