--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,8 +1,13 @@
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&family=Red+Hat+Display&family=Red+Hat+Text&family=Source+Sans+Pro&display=swap");
+
 :root {
     --color-primary: rgb(118, 0, 255);
     --color-background: rgb(24, 23, 24);
     --color-text: rgb(255, 255, 255);
     --color-selection: rgba(172, 100, 255, 0.75);
+    --font-primary: "Red Hat Display", -apple-system, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --font-secondary: "Red Hat Text";
 }
 
 ::selection {
@@ -18,4 +23,27 @@
 html,
 body {
     background-color: var(--color-background);
+}
+
+/* Boxes */
+#root {
+    display: flex;
+
+    width: 100vw;
+    height: 100vh;
+
+    background-color: var(--color-background);
+}
+
+/* Text */
+.text-big--h1 {
+    color: var(--color-text);
+    font-size: 2.5rem;
+    font-family: var(--font-primary);
+}
+
+.text-big--h2 {
+    color: var(--color-text);
+    font-size: 2rem;
+    font-family: var(--font-primary);
 }
